Feature awesome projects on UU homepage (#4)
Co-authored-by: Keven Quach <belfami@gmail.com>

Co-authored-by: Jelle Treep <h.j.treep@uu.nl>
Co-authored-by: Jelle Treep <40466121+jelletreep@users.noreply.github.com>
Co-authored-by: Keven Quach <belfami@gmail.com>

--- a/.github/workflows/update_featured.yml
+++ b/.github/workflows/update_featured.yml
@@ -1,7 +1,7 @@
 name: "Update featured projects"
 on:
   schedule:
-    - cron:  '42 6 1,15 * *'
+    - cron:  '42 6 * * MON'
   push:
     branches:
       - master
@@ -17,13 +17,10 @@ jobs:
           python-version: '3.8'
       - name: Install Python dependencies
         run: |
-          pip install requests
+          pip install requests jinja2
       - name: Parse https://github.com/UtrechtUniversity/awesome-utrecht-university
         run: |
           python scripts/parse_awesome.py
-      - name: Update README
-        run: |
-          python scripts/update_readme.py
       - name: Commit files
         run: |
           git config --local user.email "github@uu.nl"
