--- a/.github/workflows/update_featured.yml
+++ b/.github/workflows/update_featured.yml
@@ -11,7 +11,7 @@ jobs:
   download:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout master
+      - name: Checkout repocards
         uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
